integration-tests/tests/integration/snapshots/integration__banned_group_in_override_filter.snap
---
source: integration-tests/tests/integration/main.rs
expression: output.stderr_as_str()
---
  error: predicate not allowed in `override-filter` expressions
   ╭────
 1 │ group(serial)
   ·       ───┬──
   ·          ╰── group() creates a circular dependency with overrides
   ╰────

error: failed to parse filterset
